--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
+Babel==1.3
 BabelDjango==0.2.2
 Django==1.5.4
 PyYAML==3.10
 South==0.7.6
+argparse==1.2.1
+dateutils==0.6.6
+distribute==0.6.24
 dj-database-url==0.2.1
+dj-static==0.0.5
+django-coverage==1.2.4
 django-password-reset==0.4
+django-tastypie==0.9.15
+factory-boy==2.2.1
 gunicorn==0.17.4
+ipython==0.13.1
+mimeparse==0.1.3
+mock==1.0.1
+psycopg2==2.5
 pyaml==13.01.0
 python-dateutil==2.1
-ipython==0.13.1
-psycopg2==2.5 #sudo apt-get install libpq-dev python-dev
-django-tastypie==0.9.15
-dateutils==0.6.6
+pytz==2013.8
+six==1.4.1
 static==0.4
-dj-static==0.0.5
-
-django-coverage==1.2.4
-mock==1.0.1
+wsgiref==0.1.2
