--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "grunt-exec": "~0.4.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.4",
-
-    "phantomjs" : "*",
-    "karma" : "*",
-    "karma-junit-reporter" : "*",    
-    "karma-jasmine" : "*",
-    "karma-ng-scenario" : "*"
-
+    "phantomjs": "*",
+    "karma": "*",
+    "karma-junit-reporter": "*",
+    "karma-jasmine": "*",
+    "karma-ng-scenario": "*",
+    "grunt-replace": "~0.5.1"
   }
 }
