refactoring and adding css min

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma-junit-reporter": "*",
     "karma-jasmine": "*",
     "karma-ng-scenario": "*",
-    "grunt-replace": "~0.5.1"
+    "grunt-replace": "~0.5.1",
+    "grunt-contrib-cssmin": "~0.7.0"
   }
 }
