--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,12 @@
   ],
   "dependencies": {
     "angular": "1.2.3",
-    "angular-resource": "1.2.3"
+    "angular-resource": "1.2.3",
+    "angular-animate": "1.2.3",
+    "angular-ui-router": "0.2.0",
+    "store.js": "~1.3.15",
+    "angular-strap": "2.0.0-rc.2",
+    "bootstrap-datepicker": "~1.3.0",
+    "toastr": "~2.0.1"
   }
 }
