--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,12 @@
     "store.js": "~1.3.15",
     "angular-strap": "2.0.0-rc.2",
     "bootstrap-datepicker": "~1.3.0",
-    "toastr": "~2.0.1"
+    "toastr": "~2.0.1",
+    "moment": "2.0.0",
+    "bootstrap-select": "1.4.3",
+    "bootstrap-tour": "0.8.0",
+    "accounting": "0.3.2",
+    "jquery": "1.10.2",
+    "bootstrap": "3.0.0"
   }
 }
