--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,15 +1,13 @@
 app:
     build: .
-    command: python manage.py runserver 0:8080
-    ports:
-        - "8000:8080"
+    command: |
+        bash -c "
+        ./manage.py collectstatic --noinput
+        gunicorn_django  . -b 0:8080"
     links:
         - db
     environment:
-        - DATABASE_URL=postgres://postgres@db:5432/postgres
-        - DJANGO_SETTINGS_MODULE=core.dev_settings.dev
-    volumes:
-        - .:/usr/src/app
+        - DJANGO_SETTINGS_MODULE=core.settings
 
 webserver:
     image: nginx
