--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
 Babel==1.3
 BabelDjango==0.2.2
-Django==1.5.4
-PyYAML==3.10
-South==0.7.6
-argparse==1.2.1
 dateutils==0.6.6
-distribute==0.7.3
-dj-database-url==0.2.1
+dj-database-url==0.3.0
 dj-static==0.0.5
+Django==1.5.12
 django-coverage==1.2.4
 django-password-reset==0.4
 django-tastypie==0.9.15
 factory-boy==2.2.1
+freezegun==0.1.12
 gunicorn==0.17.4
 ipython==0.13.1
 mimeparse==0.1.3
 mock==1.0.1
-psycopg2==2.5
-pyaml==13.01.0
+psycopg2==2.6.1
+pyaml==13.1.0
 python-dateutil==2.1
 pytz==2013.8
+PyYAML==3.10
 six==1.4.1
+South==0.7.6
 static==0.4
-wsgiref==0.1.2
-freezegun==0.1.12
+virtualenv==13.1.2
+wheel==0.24.0
